[gd_scene load_steps=9 format=3 uid="uid://bemukmxeqw8vh"]

[ext_resource type="Script" path="res://Enemies/Scripts/GuardController.gd" id="1_loc1f"]
[ext_resource type="Script" path="res://Enemies/Scripts/GuardMovement.gd" id="1_lv0fd"]
[ext_resource type="Texture2D" uid="uid://dn7bqp3hsgrfj" path="res://icon.svg" id="2_7u3uy"]
[ext_resource type="Script" path="res://Enemies/Scripts/GuardAlertValue.gd" id="4_0sjol"]
[ext_resource type="Script" path="res://Enemies/Scripts/GuardPatrol.gd" id="4_amsnv"]
[ext_resource type="Script" path="res://Enemies/Scripts/GuardRotator.gd" id="4_lrldw"]
[ext_resource type="Script" path="res://Enemies/Scripts/GuardCheck.gd" id="6_8v6qf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2aaw5"]
radius = 64.0

[node name="Guard" type="CharacterBody2D"]
position = Vector2(-168, -240)
script = ExtResource("1_loc1f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2aaw5")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="GuardMovement" type="Node" parent="." node_paths=PackedStringArray("bodyRef", "navigation_agent")]
script = ExtResource("1_lv0fd")
movement_speed = 200
bodyRef = NodePath("..")
pathDesiredDistance = 4
targetDesiredDistance = 4
navigation_agent = NodePath("../NavigationAgent2D")

[node name="GuardPatrol" type="Node" parent="." node_paths=PackedStringArray("guardController", "guardMovement", "guardRotator")]
script = ExtResource("4_amsnv")
guardController = NodePath("..")
guardMovement = NodePath("../GuardMovement")
guardRotator = NodePath("../Rotator")
isInPatrol = true

[node name="AlertValue" type="Label" parent="."]
offset_left = -80.0
offset_top = -96.0
offset_right = 80.0
offset_bottom = -73.0
text = "ALERT VALUE"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_0sjol")

[node name="Rotator" type="Node2D" parent="." node_paths=PackedStringArray("mainNodeRef")]
script = ExtResource("4_lrldw")
leftRad = 270
downRad = 180
rightRad = 90
lookAtOffset = 90
mainNodeRef = NodePath("..")

[node name="Sprite2D" type="Sprite2D" parent="Rotator"]
texture = ExtResource("2_7u3uy")

[node name="GuardCheck" type="Area2D" parent="Rotator" node_paths=PackedStringArray("guardAlertValue")]
position = Vector2(0, -16)
rotation = 3.14159
script = ExtResource("6_8v6qf")
guardAlertValue = NodePath("../../AlertValue")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Rotator/GuardCheck"]
position = Vector2(8.00001, 40)
scale = Vector2(1.73438, 5.75293)
polygon = PackedVector2Array(23.0631, 0, -32.2883, 0, -64, 64, 64, 64)

[connection signal="reached_destination" from="GuardMovement" to="GuardPatrol" method="_on_guard_movement_reached_destination"]
